--- a/demo/styles/index.scss
+++ b/demo/styles/index.scss
@@ -2,13 +2,18 @@
 
 @import 'variables';
 
+:root {
+  --black: #130708;
+  --white: #ffffff;
+}
+
 html {
   text-size-adjust: 100%;
 }
 
 body {
-  background-color: $background-color;
-  color: $black-color;
+  background-color: var(--bkgColor);
+  color: var(--textColor);
   font-size: 1rem;
   font-family: 'Work Sans', BlinkMacSystemFont, -apple-system, 'Segoe UI',
     Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
@@ -23,6 +28,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body.light {
+  --bkgColor: var(--white);
+  --textColor: var(--black);
+}
+
+body.dark {
+  --bkgColor: var(--black);
+  --textColor: var(--white);
+}
+
 h1,
 h2,
 h3,
@@ -31,4 +46,27 @@ h5,
 h6,
 a {
   font-weight: 700;
+}
+
+button,
+.button {
+  align-items: center;
+  background-color: $blue-color;
+  border-radius: 0.125rem;
+  color: $white-color;
+  display: inline-flex;
+  font-weight: 700;
+  line-height: 1.25;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding: 0.5rem 1rem;
+
+  &:focus {
+    box-shadow: 0 0 0 3px rgba(66, 152, 225, 0.5);
+    outline: 0;
+  }
+
+  &:hover {
+    background-color: darken($blue-color, 10%);
+  }
 }
